Added param for application installation

--- a/10-hello-app/02-virtual-service.yaml
+++ b/10-hello-app/02-virtual-service.yaml
@@ -6,7 +6,7 @@ spec:
   hosts:
   - "$APP_NAME.$DOMAIN_NAME"
   gateways:
-  - hello-gateway
+  - ossm-demo/hello-gateway
   http:
   - match:
     - uri:
