--- a/env.sample
+++ b/env.sample
@@ -3,3 +3,7 @@ export DOMAIN_NAME=apps.example.com
 export APP_NAME=demo-hello
 export ISTIO_SYSTEM_NS=ossm-demo
 
+export OCP_USER=admin
+export OCP_PASSWORD=supersecret
+export OCP_TOKEN=sha256~suprersupersecret
+export OCP_API_URL=https://api.example.com:6443
