--- a/04-gateway/01-gateway-route.yaml
+++ b/04-gateway/01-gateway-route.yaml
@@ -29,6 +29,8 @@ spec:
     kind: Service
     name: istio-ingressgateway
     weight: 100
+  port:
+    targetPort: https
   tls:
     termination: passthrough
   wildcardPolicy: None
