Enabled auto route creation

--- a/01-controlplane/01-controlplane.yaml
+++ b/01-controlplane/01-controlplane.yaml
@@ -30,9 +30,9 @@ spec:
     accessLogging:
       file: 
         name: /dev/stdout
-  gateways:
-    openshiftRoute:
-      enabled: false
+  # gateways:
+  #   openshiftRoute:
+  #     enabled: false
 
    
 
