--- a/99-flussoapplicativo/istio-policies/02-mgw/06-allow-from-be.yaml
+++ b/99-flussoapplicativo/istio-policies/02-mgw/06-allow-from-be.yaml
@@ -2,7 +2,7 @@
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: allow-from-fe
+  name: allow-from-be
   namespace: mgw
 spec:
   selector:
@@ -11,4 +11,4 @@ spec:
   rules:
   - from:
     - source:
-        namespaces: [ "be", "be-*" ] # Allow traffic from the same namespace
+        namespaces: [ "be" ] # Allow traffic from the same namespace
