--- a/99-flussoapplicativo/istio-policies/03-be/06-allow-from-mgw.yaml
+++ b/99-flussoapplicativo/istio-policies/03-be/06-allow-from-mgw.yaml
@@ -11,4 +11,4 @@ spec:
   rules:
   - from:
     - source:
-        namespaces: [ "mgw", "mgw-*" ] # Allow traffic from the same namespace
+        namespaces: [ "mgw", "mgw-1" ] # Allow traffic from the same namespace
